--- a/dynamic.ipynb
+++ b/dynamic.ipynb
@@ -67,6 +67,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "784cdf64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_masks(rm_mask, building_mask, car_mask):\n",
+    "    \"\"\"\n",
+    "    处理三张mask图像：使mask3在mask1或mask2为1的位置均为0\n",
+    "    \n",
+    "    参数:\n",
+    "        mask1, mask2, mask3: 输入的灰度图mask（numpy数组），元素值为0或1，\n",
+    "                           形状需完全相同 (height, width)\n",
+    "    返回:\n",
+    "        处理后的mask3（numpy数组）\n",
+    "    \"\"\"\n",
+    "    # 检查三张图尺寸是否一致\n",
+    "    if not (rm_mask.shape == building_mask.shape == car_mask.shape):\n",
+    "        raise ValueError(\"三张mask图像的尺寸必须完全相同！\")\n",
+    "    \n",
+    "    # 步骤1：找到mask1或mask2中为1的位置（逻辑或运算）\n",
+    "    # 注：若mask是0-255的灰度图，需先转换为0/1（如 mask1 == 255）\n",
+    "    # 这里假设输入mask已是0/1的二值图\n",
+    "    mask_obstacle = np.logical_or(car_mask, building_mask)  # 结果为布尔数组，True表示需要清零的位置\n",
+    "    \n",
+    "    # 步骤2：将mask3中上述位置设为0\n",
+    "    processed_mask3 = rm_mask.copy()  # 避免修改原数组\n",
+    "    processed_mask3[mask_obstacle] = 0  # 符合条件的位置强制设为0\n",
+    "    \n",
+    "    return processed_mask3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "571004c7",
    "metadata": {},
@@ -213,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "d0aa2e1d",
    "metadata": {},
    "outputs": [],
@@ -300,13 +333,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "35b9b730",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def create_building_mask(building_vertices_dict, image_width, image_height):\n",
+    "def create_mask(vertices_dict, image_width, image_height):\n",
     "    \"\"\"\n",
     "    创建建筑物地面区域的掩码图像（适配字典格式输入）\n",
     "    \n",
@@ -323,7 +356,7 @@
     "    mask = np.zeros((image_height, image_width), dtype=np.uint8)\n",
     "    \n",
     "    # 遍历字典中的每个建筑物顶点数组（忽略键，只处理值）\n",
-    "    for vertices in building_vertices_dict.values():\n",
+    "    for vertices in vertices_dict.values():\n",
     "        # 过滤超出图像范围的顶点（避免填充错误）\n",
     "        valid_vertices = vertices[\n",
     "            (vertices[:, 0] >= 0) & (vertices[:, 0] < image_width) &\n",
@@ -338,13 +371,20 @@
     "        \n",
     "        # 填充多边形内部（值设为1）\n",
     "        cv2.fillPoly(mask, [pts], color=1)\n",
+    "        \n",
+    "        # 旋转后图像尺寸会变为 (原宽度, 原高度)\n",
+    "        rotated = cv2.rotate(mask, cv2.ROTATE_90_COUNTERCLOCKWISE)\n",
     "    \n",
-    "    return mask\n"
+    "        # 步骤2：沿height中心轴（垂直中轴线）镜像翻转（水平翻转）\n",
+    "        # 翻转后图像左右颠倒\n",
+    "        flipped = cv2.flip(rotated, flipCode=1)\n",
+    "    \n",
+    "    return flipped\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "0cd5e49d",
    "metadata": {},
    "outputs": [],
@@ -374,8 +414,8 @@
     "                                                        ground_vertices=ground_vertices_cars_np, \n",
     "                                                        image_width=image_width, \n",
     "                                                        image_height=image_height)\n",
-    "    building_mask = create_building_mask(building_pixel_coords, image_width, image_height)\n",
-    "    car_mask = create_building_mask(car_pixel_coords, image_width, image_height)\n",
+    "    building_mask = create_mask(building_pixel_coords, image_width, image_height)\n",
+    "    car_mask = create_mask(car_pixel_coords, image_width, image_height)\n",
     "    cv2.imwrite(\"building_ground_mask.png\", building_mask * 255)\n",
     "    cv2.imwrite(f\"cars_{i}.png\", car_mask * 255)\n",
     "    \n",
