--- a/dynamic.ipynb
+++ b/dynamic.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "784cdf64",
    "metadata": {},
    "outputs": [],
@@ -100,12 +100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "571004c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gray_generate(radio_map,metric,file_name,db_scale: bool = True):\n",
+    "def gray_generate(radio_map,building_mask,car_mask,metric,file_name,db_scale: bool = True):\n",
     "    \n",
     "    rm_real = radio_map.path_gain.numpy().squeeze(axis=0)\n",
     "    if metric==\"rss\" and db_scale:\n",
@@ -127,15 +127,16 @@
     "    texture = np.power(texture, 2.2)\n",
     "     # Pre-multiply alpha to avoid fringe\n",
     "    texture *= opacity[..., None]\n",
-    "\n",
+    "    \n",
     "    texture_uint8 = (texture * 255).astype(np.uint8)\n",
     "    texture_single = texture_uint8[..., 0] \n",
+    "    \n",
     "    return plt.imsave(file_name, texture_single, cmap='gray')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "910ae960",
    "metadata": {},
    "outputs": [],
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e90163aa",
    "metadata": {},
    "outputs": [],
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "d0aa2e1d",
    "metadata": {},
    "outputs": [],
@@ -333,13 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "35b9b730",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def create_mask(vertices_dict, image_width, image_height):\n",
+    "def create_building_mask(building_vertices_dict, image_width, image_height):\n",
     "    \"\"\"\n",
     "    创建建筑物地面区域的掩码图像（适配字典格式输入）\n",
     "    \n",
@@ -356,7 +357,7 @@
     "    mask = np.zeros((image_height, image_width), dtype=np.uint8)\n",
     "    \n",
     "    # 遍历字典中的每个建筑物顶点数组（忽略键，只处理值）\n",
-    "    for vertices in vertices_dict.values():\n",
+    "    for vertices in building_vertices_dict.values():\n",
     "        # 过滤超出图像范围的顶点（避免填充错误）\n",
     "        valid_vertices = vertices[\n",
     "            (vertices[:, 0] >= 0) & (vertices[:, 0] < image_width) &\n",
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0cd5e49d",
    "metadata": {},
    "outputs": [],
@@ -404,7 +405,7 @@
     "                    max_depth=10,\n",
     "                    cell_size=[1,1])\n",
     "    \n",
-    "    gray_generate(rm,metric=\"path_gain\",file_name=f\"/home/super/Zishen/RM_data_sio/RM_data/path_gain_HH_{i}.png\")\n",
+    "    \n",
     "    ground_vertices, ground_vertices_buildings_np, ground_vertices_cars_np = get_2d_vertices(scene=scene, obj_type=\"both\", with_all_vert=True)\n",
     "    building_pixel_coords = ground_3d_to_topview_pixel(scene = scene,\n",
     "                                                        ground_vertices=ground_vertices_buildings_np, \n",
@@ -414,11 +415,11 @@
     "                                                        ground_vertices=ground_vertices_cars_np, \n",
     "                                                        image_width=image_width, \n",
     "                                                        image_height=image_height)\n",
-    "    building_mask = create_mask(building_pixel_coords, image_width, image_height)\n",
-    "    car_mask = create_mask(car_pixel_coords, image_width, image_height)\n",
+    "    building_mask = create_building_mask(building_pixel_coords, image_width, image_height)\n",
+    "    car_mask = create_building_mask(car_pixel_coords, image_width, image_height)\n",
     "    cv2.imwrite(\"building_ground_mask.png\", building_mask * 255)\n",
     "    cv2.imwrite(f\"cars_{i}.png\", car_mask * 255)\n",
-    "    \n",
+    "    gray_generate(rm,building_mask,car_mask,metric=\"path_gain\",file_name=f\"/home/super/Zishen/RM_data_sio/RM_data/path_gain_HH_{i}.png\")\n",
     "    \n",
     "\n",
     "    scene.render_to_file(camera=cam,  filename=f\"HH_{i}.png\", radio_map=rm,\n",
