--- a/dynamic.ipynb
+++ b/dynamic.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cf173079",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "571004c7",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,8 @@
     "    texture_uint8 = (texture * 255).astype(np.uint8)\n",
     "    texture_single = texture_uint8[..., 0] \n",
     "    \n",
-    "    return plt.imsave(file_name, texture_single, cmap='gray')"
+    "    texture_final = process_masks(texture_single, building_mask, car_mask)\n",
+    "    return plt.imsave(file_name, texture_final, cmap='gray')"
    ]
   },
   {
@@ -388,7 +389,32 @@
    "execution_count": null,
    "id": "0cd5e49d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "三张mask图像的尺寸必须完全相同！",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[32m     28\u001b[39m cv2.imwrite(\u001b[33m\"\u001b[39m\u001b[33mbuilding_ground_mask.png\u001b[39m\u001b[33m\"\u001b[39m, building_mask * \u001b[32m255\u001b[39m)\n\u001b[32m     29\u001b[39m cv2.imwrite(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mcars_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.png\u001b[39m\u001b[33m\"\u001b[39m, car_mask * \u001b[32m255\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m \u001b[43mgray_generate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrm\u001b[49m\u001b[43m,\u001b[49m\u001b[43mbuilding_mask\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcar_mask\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmetric\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mpath_gain\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mfile_name\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m/home/super/Zishen/RM_data_sio/RM_data/path_gain_HH_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mi\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m.png\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     33\u001b[39m scene.render_to_file(camera=cam,  filename=\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mHH_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.png\u001b[39m\u001b[33m\"\u001b[39m, radio_map=rm,\n\u001b[32m     34\u001b[39m                  resolution=(\u001b[32m256\u001b[39m,\u001b[32m256\u001b[39m),\n\u001b[32m     35\u001b[39m             num_samples=\u001b[32m1024\u001b[39m,\n\u001b[32m     36\u001b[39m             rm_vmin=-\u001b[32m140\u001b[39m)\n\u001b[32m     37\u001b[39m j= \u001b[32m1\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 27\u001b[39m, in \u001b[36mgray_generate\u001b[39m\u001b[34m(radio_map, building_mask, car_mask, metric, file_name, db_scale)\u001b[39m\n\u001b[32m     24\u001b[39m texture_uint8 = (texture * \u001b[32m255\u001b[39m).astype(np.uint8)\n\u001b[32m     25\u001b[39m texture_single = texture_uint8[..., \u001b[32m0\u001b[39m] \n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m texture_final = \u001b[43mprocess_masks\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtexture_single\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbuilding_mask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcar_mask\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     28\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m plt.imsave(file_name, texture_final, cmap=\u001b[33m'\u001b[39m\u001b[33mgray\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 13\u001b[39m, in \u001b[36mprocess_masks\u001b[39m\u001b[34m(rm_mask, building_mask, car_mask)\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# 检查三张图尺寸是否一致\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (rm_mask.shape == building_mask.shape == car_mask.shape):\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33m三张mask图像的尺寸必须完全相同！\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# 步骤1：找到mask1或mask2中为1的位置（逻辑或运算）\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# 注：若mask是0-255的灰度图，需先转换为0/1（如 mask1 == 255）\u001b[39;00m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# 这里假设输入mask已是0/1的二值图\u001b[39;00m\n\u001b[32m     18\u001b[39m mask_obstacle = np.logical_or(car_mask, building_mask)  \u001b[38;5;66;03m# 结果为布尔数组，True表示需要清零的位置\u001b[39;00m\n",
+      "\u001b[31mValueError\u001b[39m: 三张mask图像的尺寸必须完全相同！"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。\n",
+      "\u001b[1;31m请查看单元格中的代码，以确定故障的可能原因。\n",
+      "\u001b[1;31m单击<a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>了解详细信息。\n",
+      "\u001b[1;31m有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
+     ]
+    }
+   ],
    "source": [
     "displacement_vec_x_p = [10,0,0]\n",
     "displacement_vec_x_n = [-10,0,0]\n",
